--- a/report/taa_report.tex
+++ b/report/taa_report.tex
@@ -359,6 +359,38 @@ These were some tests we used to test the \textit{bulletproofness} of our algori
 
 0 7
 
+	\item Test 4 (in Figure , with its output also visually represented): %TODO figura que diz AQUI, a do I
+1
+
+
+12
+
+0 0
+
+3 0
+
+3 1
+
+2 1
+
+2 2
+
+3 2
+
+3 3
+
+0 3
+
+0 2
+
+1 2
+
+1 1
+
+0 1
+
+0
+
 \end{itemize}
 
 This implementation has a complexity $n$ $log(n)$, where $n$ is the number of edges of the polygon, for the sweep based parts. The implementation has output sensitive complexity in some parts, since it depends on the number of rectangles one gets from the grid partition.
