--- a/report/taa_report.tex
+++ b/report/taa_report.tex
@@ -212,12 +212,12 @@ Unfortunately, we were not able to complete the last one.
 
 \subsection{Our Idea for the Grid Partition - An Example}\label{subsec:gridex}
 
-Consider the example in Figure . %TODO adicionar referência \ref{fig:idea} à figura com \label{fig:idea} antes do ponto
+Consider the example in Figure \ref{fig:idea}.
 
 \begin{figure}[h!]
-  \centering \includegraphics[scale=0.2]{first.jpg}
-  \caption{Polygon with hole}
-  \label{fig:grid}
+  \centering \includegraphics[scale=0.2]{second.png}
+  \caption{Polygon with a horizontal partition.}
+  \label{fig:idea}
 \end{figure}
 
 In this example, we do not need to divide any extensions of events.
@@ -237,6 +237,7 @@ We continue to do this until we have no more faces to visit, obtaining then the 
 These were some tests we used to test the \textit{bulletproofness} of our algorithm:
 \begin{itemize}
 	\item Test 1:
+
 1
 
 20
@@ -283,7 +284,7 @@ These were some tests we used to test the \textit{bulletproofness} of our algori
 
 0
 
-	\item Test 2 (with a hole and in Figure 5): %TODO \ref para a figura com buraco)
+	\item Test 2 (with a hole and in Figure \ref{fig:hole}):
 
 0
 
@@ -363,7 +364,8 @@ These were some tests we used to test the \textit{bulletproofness} of our algori
 
 0 7
 
-	\item Test 4 (in Figure 6, with its output also visually represented): %TODO figura que diz AQUI, a do I
+	\item Test 4 (in Figure \ref{fig:idea}, with its output also visually represented):
+
 1
 
 
@@ -398,9 +400,9 @@ These were some tests we used to test the \textit{bulletproofness} of our algori
 \end{itemize}
 
 \begin{figure}[h!]
-  \centering \includegraphics[scale=0.2]{second.png}
-  \caption{Grid Partition Representation.}
-  \label{fig:grid}
+  \centering \includegraphics[scale=0.2]{first.jpg}
+  \caption{Example of a polygon with one hole.}
+  \label{fig:hole}
 \end{figure}
 
 This implementation has a complexity $n$ $log(n)$, where $n$ is the number of edges of the polygon, for the sweep based parts. The implementation has output sensitive complexity in some parts, since it depends on the number of rectangles one gets from the grid partition.
